syntax = "proto3";

import "gogoproto/gogo.proto";

message Metrics {
    string cluster_id = 1 [(gogoproto.customname) = "ClusterID"];
    string pod_id = 2 [(gogoproto.customname) = "PodID"];
    int64 nodes = 3;
    string version = 4;
    int64 repos = 5;
    int64 commits = 6;
    int64 files = 7;
    int64 bytes = 8;
    int64 jobs = 9;
    int64 pipelines = 10;
    int64 archived_commits = 11;
    int64 cancelled_commits = 12;
}
